<resources>
    <!-- Activity labels -->
    <string name="app_name">Contacts</string>
    <string name="new_activity_label">New Contact</string>
    <string name="display_contact_label">Contact List</string>
    <string name="view_contact_label">Viewing Contact</string>


    <!-- Main Activity Strings -->
    <string name="button_create_new">Create New</string>
    <string name="button_edit_contact">Edit Contact</string>
    <string name="button_delete_contact">Delete Contact</string>
    <string name="button_display_contact">Display Contact</string>
    <string name="button_finish">Finish</string>


    <!-- Create New Contact Activity Strings -->
    <string name="editText_firstName">First</string>
    <string name="editText_lastName">Last</string>
    <string name="editText_company">Company</string>
    <string name="editText_phone">Phone</string>
    <string name="editText_email">Email</string>
    <string name="editText_url">URL</string>
    <string name="editText_address">Address</string>
    <string name="editText_birthday">Birthday</string>
    <string name="editText_nickname">Nickname</string>
    <string name="editText_facebook">Facebook</string>
    <string name="editText_twitter">Twitter</string>
    <string name="editText_skype">Skype</string>
    <string name="editText_youtube">Youtube</string>

    <string name="button_save">Save</string>

    <string name="textView_firstName">First Name: \</string>
    <string name="textView_lastName">Last Name: \</string>
    <string name="textView_company">Company: \</string>
    <string name="textView_phone">Phone: \</string>
    <string name="textView_email">Email: \</string>
    <string name="textView_url">URL: \</string>
    <string name="textView_address">Address: \</string>
    <string name="textView_birthday">Birthday: \</string>
    <string name="textView_nickname">Nickname: \</string>
    <string name="textView_facebook">Facebook: \</string>
    <string name="textView_twitter">Twitter: \</string>
    <string name="textView_skype">Skype: \</string>
    <string name="textView_youtube">Youtube: \</string>
</resources>
