<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tristan.android_projects.newActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageButton
            android:id="@+id/addPhotoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:layout_margin="50dp"
            android:maxHeight="200dp"
            android:maxWidth="200dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/add_photo" />

        <EditText
            android:id="@+id/editFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="15dp"
            android:inputType="textPersonName"
            android:text="@string/editText_firstName" />

        <EditText
            android:id="@+id/editLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="15dp"
            android:inputType="textPersonName"
            android:text="@string/editText_lastName" />

        <EditText
            android:id="@+id/editCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="15dp"
            android:inputType="textPersonName"
            android:text="@string/editText_company" />

        <EditText
            android:id="@+id/editPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="15dp"
            android:inputType="textPersonName"
            android:text="@string/editText_phone" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="15dp"
            android:inputType="textPersonName"
            android:text="@string/editText_email" />

        <EditText
            android:id="@+id/editURL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="15dp"
            android:inputType="textPersonName"
            android:text="@string/editText_url" />

        <EditText
            android:id="@+id/editAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="15dp"
            android:inputType="textPersonName"
            android:text="@string/editText_address" />

        <EditText
            android:id="@+id/editBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="15dp"
            android:inputType="textPersonName"
            android:text="@string/editText_birthday" />

        <EditText
            android:id="@+id/editNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="15dp"
            android:inputType="textPersonName"
            android:text="@string/editText_nickname" />

        <EditText
            android:id="@+id/editFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="15dp"
            android:inputType="textPersonName"
            android:text="@string/editText_facebook" />

        <EditText
            android:id="@+id/editTwitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="15dp"
            android:inputType="textPersonName"
            android:text="@string/editText_twitter" />

        <EditText
            android:id="@+id/editSkype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="15dp"
            android:inputType="textPersonName"
            android:text="@string/editText_skype" />

        <EditText
            android:id="@+id/editYoutube"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="15dp"
            android:inputType="textPersonName"
            android:text="@string/editText_youtube" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/button_save" />

    </LinearLayout>

</ScrollView>
